--- a/src/style.css
+++ b/src/style.css
@@ -231,7 +231,7 @@ button {
     Preloader CSS
    ========================= */
 .site-preloader-wrap {
-  background: #fe5619;
+  background: #4650dc;
   height: 100%;
   position: fixed;
   width: 100%;
