--- a/src/style.css
+++ b/src/style.css
@@ -728,8 +728,17 @@ Services Area CSS
   height: 35em;
 }
 .service-item:hover {
-  background-color: #fff;
+  background-color: #4650dc;
+  color: white;
 }
+
+.service-item:hover h3 {
+  color: white;
+}
+.service-item:hover .glyph i {
+  color: white;
+}
+
 .service-item p {
   margin: 0;
 }
@@ -946,8 +955,6 @@ Services Area CSS
 }
 .team-box:before {
   content: "";
-  display: block;
-  border: 30px solid rgba(255, 255, 255, 0.3);
   position: absolute;
   top: 5px;
   left: 5px;
@@ -959,12 +966,10 @@ Services Area CSS
   -webkit-transition: all 1s ease 0s;
 }
 .team-box:hover:before {
-  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 .team-box:after {
   content: "";
   display: block;
-  border: 10px solid rgba(255, 255, 255, 0.7);
   position: absolute;
   top: 35px;
   left: 35px;
