--- a/src/assets/css/color/color-blue.css
+++ b/src/assets/css/color/color-blue.css
@@ -129,6 +129,7 @@ a:focus {
 .content-box.color-effect-1,
 .footer {
   background-color: #4650dc;
+  height: 0em;
 }
 .single-testimonial-item i,
 .partners-slides .owl-nav div {
