--- a/src/style.css
+++ b/src/style.css
@@ -1604,7 +1604,7 @@ Services Area CSS
 .plan-price {
   width: 100%;
   background: linear-gradient(to bottom, #fafafa 0%, #f6f6f6);
-  padding: 45px 30px;
+  padding: 15px 30px;
   padding-top: 48px;
 }
 .plan-price h3 {
@@ -1698,6 +1698,7 @@ a.button.border {
 .plan.featured .plan-price .value {
   color: #fff;
   font-size: 20px;
+  margin: -30px 0 0 0;
 }
 .plan.featured .plan-price .period {
   color: rgba(255, 255, 255, 0.8);
